--- a/acceuil.html
+++ b/acceuil.html
@@ -42,5 +42,10 @@
         </div>
     </main>
 
+    <footer>
+
+        &copy; Etudiants BTS SIO 2025-2027. Tous droits réservés.
+    </footer>
+
 </body>
 </html>
