ajout d'une structure html dans la page "donnees.html"

--- a/donnees.html
+++ b/donnees.html
@@ -25,7 +25,12 @@
 
 
     <main>
-
+        <div>
+            <h1>
+                Le disque dur 
+            </h1>
+            <p>S</p>
+        </div>
 
     </main>
 
