--- a/stockage.html
+++ b/stockage.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="global.css">
+    
+
 </head>
 <body>
     <header>
@@ -29,7 +31,34 @@
             <h1>
                 Le disque dur 
             </h1>
-            <p>S</p>
+            <p></p>
+        </div>
+
+
+        <div>
+            <h3>Introduction</h3>
+
+            <p>
+                Un disque dur est un composant informatique interne ou externe qui stocke des données, 
+                <br><br>telles que le système d’exploitation, les applications et les fichiers de l'utilisateur.
+            </p>
+        </div>
+
+        <div>
+            <h3>Différence entre le disque dur et la mémoire vive</h3>
+
+            <p>
+
+            </p>
+        </div>
+
+
+        <div>
+            <h3>Importance du choix de disque dur</h3>
+
+            <p>
+
+            </p>
         </div>
 
     </main>
