--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
         </div>
     </main>
 
+    <footer>    
+        &copy; BTS SIO 2025-2027. Tous droits réservés.
+    </footer>
+
 </body>
 </html>
