--- a/stockage.html
+++ b/stockage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
-    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/acceuil.css">
     
 
 </head>
@@ -35,7 +36,8 @@
         </div>
 
 
-        <div>
+        <div class="intro-grid">
+        <div class="card">
             <h3>Introduction</h3>
 
             <p>
@@ -44,8 +46,19 @@
             </p>
         </div>
 
-        <div>
+        <div class="card">
             <h3>Différence entre le disque dur et la mémoire vive</h3>
+
+            <p>
+                La mémoire vive (RAM) est utilisée pour le stockage temporaire des données<br>
+                 nécessaires au fonctionnement immédiat de l'ordinateur,tandis que <br>
+                 le disque dur (HDD) sert à stocker des données de manière permanente.
+            </p>
+        </div>
+
+
+        <div>
+            <h3 class="card">Type de disque dur</h3>
 
             <p>
 
@@ -53,19 +66,13 @@
         </div>
 
 
-        <div>
-            <h3>Importance du choix de disque dur</h3>
-
-            <p>
-
-            </p>
         </div>
 
     </main>
 
 
-    <footer>
-
+    <footer>    
+        &copy; BTS SIO 2025-2027. Tous droits réservés.
     </footer>
 </body>
 </html>
