ajout des pages et styles de gpu/cpu/RAM

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
             <div class="card">
                 <h3>Vulgarisation</h3>
                 <p>Apprenez comment un ordinateur fonctionne réellement grâce à nos analogies simples.</p>
+                <a href="architecture.html"><button class="go-to">Apprendre !</button></a>
             </div>
             <div class="card">
                 <h3>Comparatifs</h3>
                 <p>Découvrez les duels entre les géants du secteur : Intel vs AMD, NVIDIA vs Radeon.</p>
+                <a href="cpu.html"><button class="go-to">Intel vs AMD !</button></a>
+                <a href="gpu.html"><button class="go-to">NVIDIA vs Radeon</button></a>
             </div>
         </div>
     </main>
