Changement du styles et des pages ram/gpu/cpu

--- a/cpu.html
+++ b/cpu.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CPU | Processeurs - Cyber-Hardware</title>
+    <title>CPU | Intel vs AMD - Cyber-Hardware</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/cpu.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -18,47 +19,67 @@
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
-                <li><a href="cooling.html">Energie</a></li>
+                <li><a href="cooling.html">Energie/Cooling</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="container py-5">
-        <section class="cpu-intro">
-            <h1>LE CPU : LE CHEF D'ORCHESTRE</h1>
-            <p>Le processeur exécute les instructions et coordonne chaque action de votre PC.</p>
+    <main class="container">
+        <section class="hero-sub">
+            <h1>Le Processeur (CPU)</h1>
+            <p>Le cerveau de votre machine, là où chaque instruction prend vie.</p>
         </section>
 
-        
+        <section class="content-text">
+            <h2>Qu'est-ce qu'un CPU ?</h2>
+            <p>Le Central Processing Unit (CPU) est le composant qui exécute les instructions des programmes. Comme un
+                chef de cuisine, il reçoit des commandes, les traite et envoie le résultat aux autres parties du PC. Sa
+                puissance se mesure souvent en GigaHertz (GHz), représentant sa vitesse de calcul, et en nombre de
+                cœurs, permettant de traiter plusieurs tâches simultanément.</p>
 
-        <div class="cpu-comparison">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Spécification</th>
-                        <th>Intel Core i9-14900K</th>
-                        <th>AMD Ryzen 9 7950X</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Architecture</td>
-                        <td>Hybride (P-cores / E-cores)</td>
-                        <td>Zen 4</td>
-                    </tr>
-                    <tr>
-                        <td>Cœurs / Threads</td>
-                        <td>24 / 32</td>
-                        <td>16 / 32</td>
-                    </tr>
-                    <tr>
-                        <td>Fréquence Boost</td>
-                        <td>6.0 GHz</td>
-                        <td>5.7 GHz</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+            <h2>La Rivalité : Intel vs AMD</h2>
+            <p>Le marché est dominé par deux géants. <strong>Intel</strong> est réputé pour sa stabilité et ses
+                performances élevées sur un seul cœur, ce qui est idéal pour le gaming. À l'inverse,
+                <strong>AMD</strong> a révolutionné le marché avec ses processeurs Ryzen, offrant un grand nombre de
+                cœurs à un prix compétitif, excellant dans le multitâche et le montage vidéo. Le choix dépendra donc de
+                votre usage : le calcul pur ou la polyvalence applicative.
+            </p>
+        </section>
+
+        <section class="content-text">
+
+            <h2>Qu'est-ce qu'un CPU ?</h2>
+
+            <p>Le Central Processing Unit (CPU) est le composant qui exécute les instructions...</p>
+
+        </section>
+
+        <table class="comp-table">
+            <thead>
+                <tr>
+                    <th>Marque</th>
+                    <th>Série Phare</th>
+                    <th>Point Fort</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Intel</td>
+                    <td>Core i9-14900K</td>
+                    <td>Gaming & Fréquence brute</td>
+                </tr>
+                <tr>
+                    <td>AMD</td>
+                    <td>Ryzen 9 7950X3D</td>
+                    <td>Efficacité & Cache L3 (Gaming)</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
+
+    <footer>
+        &copy; BTS SIO 2025-2027. Tous droits réservés.
+    </footer>
 </body>
+
 </html>
