--- a/gpu.html
+++ b/gpu.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPU | Cartes Graphiques - Cyber-Hardware</title>
+    <title>GPU | NVIDIA vs AMD - Cyber-Hardware</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/gpu.css">
 </head>
 <body>
-
     <header>
         <nav>
             <ul>
@@ -23,22 +22,48 @@
             </ul>
         </nav>
     </header>
-    <main class="container py-5">
-        <h1 class="page-title">PUISSANCE GRAPHIQUE</h1>
-        
-        <div class="gpu-grid">
-            <div class="gpu-brand nvidia">
-                <h2>NVIDIA GeForce</h2>
-                <div class="feature-tag">RTX & DLSS</div>
-                <p>Spécialiste du Ray Tracing en temps réel et de l'IA.</p>
-            </div>
 
-            <div class="gpu-brand amd">
-                <h2>AMD Radeon</h2>
-                <div class="feature-tag">FSR & RDNA 3</div>
-                <p>Performance brute et excellent rapport qualité/prix.</p>
-            </div>
+    <main class="container gpu-section">
+        <div class="hero-sub">
+            <h1>La Carte Graphique (GPU)</h1>
+            <p>Le moteur visuel de vos jeux et applications créatives.</p>
+        </div>
+
+        <div class="rivalry-text">
+            <h2>À quoi sert le GPU ?</h2>
+            <p>Contrairement au CPU qui est généraliste, le Graphics Processing Unit (GPU) est spécialisé dans le calcul parallèle massif. Il est conçu pour manipuler des millions de pixels simultanément. C'est lui qui détermine si vous pouvez jouer en 4K ou faire du rendu 3D complexe avec fluidité.</p>
+
+            <h2>Le Duel des Géants</h2>
+            <p><strong>NVIDIA</strong> domine actuellement le haut de gamme avec ses cartes RTX. Leur force réside dans le <em>Ray Tracing</em> (gestion réaliste de la lumière) et le <em>DLSS</em>, une technologie utilisant l'IA pour augmenter les performances. <strong>AMD</strong>, avec ses cartes Radeon, se bat sur le terrain du rapport performances/prix et de la mémoire vidéo (VRAM) plus généreuse, ce qui permet aux jeux de rester fluides sur le long terme sans saturer la mémoire.</p>
+        </div>
+
+        
+
+        <div class="gpu-grid">
+            <article class="gpu-card nvidia">
+                <h3>NVIDIA GeForce</h3>
+                <p>Leader technologique axé sur l'innovation logicielle et l'IA.</p>
+                <ul class="tech-list">
+                    <li>Ray Tracing ultra-performant</li>
+                    <li>DLSS 3.5 (IA Upscaling)</li>
+                    <li>Ecosystème logiciel (Broadcast, Reflex)</li>
+                </ul>
+            </article>
+
+            <article class="gpu-card amd">
+                <h3>AMD Radeon</h3>
+                <p>L'alternative performante avec une approche plus ouverte.</p>
+                <ul class="tech-list">
+                    <li>Excellent rapport FPS/Prix</li>
+                    <li>VRAM généreuse (Mémoire Vidéo)</li>
+                    <li>FSR (Technologie Open-Source)</li>
+                </ul>
+            </article>
         </div>
     </main>
+
+    <footer class="container" style="text-align: center; padding: 40px 0; border-top: 1px solid var(--bg-card); margin-top: 50px;">
+        <p>&copy; BTS SIO 2025-2027. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
