--- a/stockage.html
+++ b/stockage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/acceuil.css">
+    <link rel="stylesheet" href="css/architecture.css">
     
 
 </head>
@@ -37,7 +37,7 @@
 
 
         <div class="intro-grid">
-        <div class="card">
+        <div class="analogy-card">
             <h3>Introduction</h3>
 
             <p>
@@ -46,7 +46,7 @@
             </p>
         </div>
 
-        <div class="card">
+        <div class="analogy-card">
             <h3>Différence entre le disque dur et la mémoire vive</h3>
 
             <p>
@@ -58,7 +58,7 @@
 
 
         <div>
-            <h3 class="card">Type de disque dur</h3>
+            <h3 class="analogy-card">Type de disque dur</h3>
 
             <p>
 
