Changement du nom de la page de l'alimentation et refroidissement

--- a/stockage.html
+++ b/stockage.html
@@ -20,7 +20,7 @@
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
-                <li><a href="cooling.html">Energie/Cooling</a></li>
+                <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
             </ul>
         </nav>
     </header>
