--- a/stockage.html
+++ b/stockage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/architecture.css">
+    <!-- <link rel="stylesheet" href="css/architecture.css"> -->
     
 
 </head>
