mis a jour de certain style

--- a/cpu.html
+++ b/cpu.html
@@ -25,9 +25,11 @@
     </header>
 
     <main class="container">
-        <section class="hero-sub">
-            <h1>Le Processeur (CPU)</h1>
-            <p>Le cerveau de votre machine, là où chaque instruction prend vie.</p>
+        <section class="hero-cpu">
+            <div class="container">
+                <h1>Le Processeur (CPU)</h1>
+                <p>Le cerveau de votre machine, là où chaque instruction prend vie.</p>
+            </div>
         </section>
 
         <section class="content-text">
