--- a/ram.html
+++ b/ram.html
@@ -24,7 +24,7 @@
     </header>
 
     <main class="container ram-container">
-        <section class="hero-sub">
+        <section class="hero-ram">
             <h1>La Mémoire Vive (RAM)</h1>
             <p>L'espace de travail éphémère de vos logiciels.</p>
         </section>
