--- a/stockage.html
+++ b/stockage.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stockage de données</title>
+    <title>Stockage | SSD vs HDD - Cyber-Hardware</title>
     <link rel="stylesheet" href="css/global.css">
-    <!-- <link rel="stylesheet" href="css/architecture.css"> -->
-    
-
+    <link rel="stylesheet" href="css/stockage.css">
 </head>
 <body>
     <header>
@@ -20,59 +18,46 @@
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
-                <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
+                <li><a href="cooling.html">Energie/Cooling</a></li>
             </ul>
         </nav>
     </header>
 
+    <main class="storage-section">
+        <section class="hero-storage">
+            <h1>Le Stockage de Données</h1>
+            <p>Le coffre-fort de votre système et de vos fichiers personnels.</p>
+        </section>
 
+        <div class="container">
+            <section class="explanation-box">
+                <h2>Rôle du Stockage</h2>
+                <p>Contrairement à la RAM, le stockage est une mémoire dite "non-volatile" : les données y restent même quand le PC est éteint. C'est ici que sont installés votre système d'exploitation (Windows, Linux), vos logiciels et tous vos documents.</p>
+                
+                <h2>La Rivalité : La Vitesse contre le Volume</h2>
+                <p>Pendant des décennies, le <strong>HDD</strong> (disque mécanique) était la seule option, offrant beaucoup d'espace mais une grande lenteur. L'arrivée du <strong>SSD</strong> a tout changé en supprimant les pièces mobiles. Aujourd'hui, le standard <strong>NVMe</strong> (qui se branche directement sur la carte mère) offre des vitesses jusqu'à 100 fois supérieures à un vieux disque dur.</p>
+            </section>
 
-    <main>
-        <div>
-            <h1>
-                Le disque dur 
-            </h1>
-            <p></p>
+            <div class="storage-comparison">
+                <div class="storage-block">
+                    <div class="storage-label">HDD</div>
+                    <div class="storage-details">
+                        <p>Idéal pour le stockage de masse (photos, films) à bas prix. Très lent pour lancer un système mais très fiable pour l'archivage.</p>
+                    </div>
+                </div>
+
+                <div class="storage-block active">
+                    <div class="storage-label">NVMe</div>
+                    <div class="storage-details">
+                        <p>Le summum de la technologie actuelle. Windows démarre en quelques secondes et les chargements de jeux deviennent quasi instantanés.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-        <div class="intro-grid">
-        <div class="analogy-card">
-            <h3>Introduction</h3>
-
-            <p>
-                Un disque dur est un composant informatique interne ou externe qui stocke des données, 
-                <br><br>telles que le système d’exploitation, les applications et les fichiers de l'utilisateur.
-            </p>
-        </div>
-
-        <div class="analogy-card">
-            <h3>Différence entre le disque dur et la mémoire vive</h3>
-
-            <p>
-                La mémoire vive (RAM) est utilisée pour le stockage temporaire des données<br>
-                 nécessaires au fonctionnement immédiat de l'ordinateur,tandis que <br>
-                 le disque dur (HDD) sert à stocker des données de manière permanente.
-            </p>
-        </div>
-
-
-        <div>
-            <h3 class="analogy-card">Type de disque dur</h3>
-
-            <p>
-
-            </p>
-        </div>
-
-
-        </div>
-
     </main>
 
-
-    <footer>    
-        &copy; BTS SIO 2025-2027. Tous droits réservés.
+    <footer class="container text-center py-4 mt-5 border-top border-secondary">
+        <p>&copy; BTS SIO 2025-2027. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
