--- a/stockage.html
+++ b/stockage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
     <link rel="stylesheet" href="css/global.css">
-    <!-- <link rel="stylesheet" href="css/architecture.css"> -->
+     <link rel="stylesheet" href="css/cpu.css">
     
 
 </head>
@@ -36,18 +36,17 @@
         </div>
 
 
-        <div class="intro-grid">
-        <div class="analogy-card">
-            <h3>Introduction</h3>
+        <div class="content-text">
+            <h2>Introduction</h2>
 
             <p>
                 Un disque dur est un composant informatique interne ou externe qui stocke des données, 
                 <br><br>telles que le système d’exploitation, les applications et les fichiers de l'utilisateur.
             </p>
-        </div>
+        
 
         <div class="analogy-card">
-            <h3>Différence entre le disque dur et la mémoire vive</h3>
+            <h2>Différence entre le disque dur et la mémoire vive</h2>
 
             <p>
                 La mémoire vive (RAM) est utilisée pour le stockage temporaire des données<br>
@@ -56,9 +55,11 @@
             </p>
         </div>
 
+        </div>
 
-        <div>
-            <h3 class="analogy-card">Type de disque dur</h3>
+
+        <div class="content-text">
+            <h2>Type de disque dur</h2>
 
             <p>
 
@@ -66,10 +67,9 @@
         </div>
 
 
-        </div>
+
 
     </main>
-
 
     <footer>    
         &copy; BTS SIO 2025-2027. Tous droits réservés.
