--- a/stockage.html
+++ b/stockage.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage de données</title>
     <link rel="stylesheet" href="css/global.css">
-     <link rel="stylesheet" href="css/cpu.css">
-    
+    <link rel="stylesheet" href="css/cpu.css">
+
 
 </head>
+
 <body>
     <header>
         <nav>
@@ -30,7 +32,7 @@
     <main>
         <div>
             <h1>
-                Le disque dur 
+                Le disque dur
             </h1>
             <p></p>
         </div>
@@ -40,30 +42,47 @@
             <h2>Introduction</h2>
 
             <p>
-                Un disque dur est un composant informatique interne ou externe qui stocke des données, 
-                <br><br>telles que le système d’exploitation, les applications et les fichiers de l'utilisateur.
+                Un disque dur est un composant informatique interne ou externe qui stocke des données,
+                <br>telles que le système d’exploitation, les applications et les fichiers de l'utilisateur.
             </p>
-        
 
-        <div class="analogy-card">
-            <h2>Différence entre le disque dur et la mémoire vive</h2>
 
-            <p>
-                La mémoire vive (RAM) est utilisée pour le stockage temporaire des données<br>
-                 nécessaires au fonctionnement immédiat de l'ordinateur,tandis que <br>
-                 le disque dur (HDD) sert à stocker des données de manière permanente.
-            </p>
-        </div>
+            <div class="analogy-card">
+                <h2>Différence entre le disque dur et la mémoire vive</h2>
+
+                <p>
+                    La mémoire vive (RAM) est utilisée pour le stockage temporaire des données<br>
+                    nécessaires au fonctionnement immédiat de l'ordinateur,tandis que <br>
+                    le disque dur (HDD) sert à stocker des données de manière permanente.
+                </p>
+            </div>
 
         </div>
 
 
         <div class="content-text">
-            <h2>Type de disque dur</h2>
+            <h2>Types de disques de stockage</h2>
 
-            <p>
+            <h3>HDD (disque dur mécanique)</h3>
+            <p>Le HDD est un disque de stockage basé sur des plateaux mécaniques. Il offre une grande capacité à faible
+                coût, mais reste plus lent et plus fragile qu’un SSD.</p>
 
-            </p>
+            <h3>SSD SATA</h3>
+            <p>Le SSD SATA utilise de la mémoire flash et ne contient aucune pièce mécanique. Il est beaucoup plus
+                rapide qu’un HDD et améliore nettement la réactivité d’un ordinateur.</p>
+
+            <h3>SSD NVMe (M.2 PCIe)</h3>
+            <p>Le SSD NVMe se connecte directement au bus PCIe, ce qui lui permet d’atteindre des vitesses de lecture et
+                d’écriture très élevées. Il est idéal pour le gaming, le montage vidéo et les usages intensifs.</p>
+
+            <h3>Stockage externe</h3>
+            <p>Le stockage externe regroupe les disques durs et SSD portables, ainsi que les clés USB. Il est pratique
+                pour transporter des données ou réaliser des sauvegardes simples.</p>
+
+            <h3>NAS (Network Attached Storage)</h3>
+            <p>Un NAS est un boîtier de stockage connecté au réseau, accessible par plusieurs appareils. Il sert souvent
+                pour les sauvegardes, le partage de fichiers et le stockage centralisé à la maison ou en entreprise.</p>
+
         </div>
 
 
@@ -71,8 +90,9 @@
 
     </main>
 
-    <footer>    
+    <footer>
         &copy; BTS SIO 2025-2027. Tous droits réservés.
     </footer>
 </body>
+
 </html>
