Finiolage des images dans architecture

--- a/architecture.html
+++ b/architecture.html
@@ -39,28 +39,28 @@
 
         <div class="analogy-grid">
             <div class="analogy-card">
-                <div class="icon-box">👨‍🍳</div>
+                <div class="icon-box"><img src="Assets/Cuisto.svg" alt="👨‍🍳"></div>
                 <h3>Le CPU : Le Chef de Cuisine</h3>
                 <p>C'est lui qui exécute les instructions (les recettes). Plus il est rapide, plus il traite de
                     commandes vite.</p>
             </div>
 
             <div class="analogy-card">
-                <div class="icon-box">🔪</div>
+                <div class="icon-box"><img src="Assets/plan_de_trvail.svg" alt="🔪"></div>
                 <h3>La RAM : Le Plan de Travail</h3>
                 <p>C'est l'espace où le chef pose ses ingrédients en cours d'utilisation. Plus il est grand, plus on
                     peut préparer de plats en même temps.</p>
             </div>
 
             <div class="analogy-card">
-                <div class="icon-box">🧊</div>
+                <div class="icon-box"><img src="Assets/Refrigerateur.svg" alt="🧊"></div>
                 <h3>Le Stockage : Le Réfrigérateur</h3>
                 <p>C'est là qu'on range les données sur le long terme. Un SSD est comme un frigo bien rangé où l'on
                     trouve tout instantanément.</p>
             </div>
 
             <div class="analogy-card">
-                <div class="icon-box">🏗️</div>
+                <div class="icon-box"><img src="Assets/resto.svg" alt="🏗️"></div>
                 <h3>La Carte Mère : La Cuisine</h3>
                 <p>C'est la structure même de la pièce qui relie le chef, le plan de travail et le frigo pour qu'ils
                     communiquent entre eux.</p>
