--- a/cooling.html
+++ b/cooling.html
@@ -32,16 +32,18 @@
         </section>
 
         <div class="container">
-            <section class="explanation-box">
+            <section class="content-text">
                 <h2>L'Alimentation (PSU)</h2>
                 <p>C'est le cœur énergétique. Elle transforme le courant alternatif de votre prise en courant continu
                     stable. Une mauvaise alimentation peut détruire tout votre PC en cas de surtension.</p>
-
+            </section>
+            <section class="content-text">
                 <h2>Rivalité : Air Cooling vs Watercooling</h2>
                 <p>Le <strong>Ventirad</strong> (Air Cooling) est simple, increvable et efficace pour la majorité. Le
                     <strong>Watercooling</strong> utilise un liquide pour transporter la chaleur vers un radiateur
                     externe. Il est plus esthétique et plus performant pour les PC haut de gamme, mais plus complexe à
-                    installer.</p>
+                    installer.
+                </p>
             </section>
 
             <div class="cooling-grid">
