--- a/mobo.html
+++ b/mobo.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La carte mère</title>
+    <title>Composants PC - La Carte Mère</title>
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/mobo.css">
 </head>
-<body>
+
+<body class="mb-page">
+
     <header>
         <nav>
             <ul>
@@ -22,17 +26,76 @@
         </nav>
     </header>
 
-    <main>
-        <div>
-            <h1>
-                La carte mére
-            </h1>
+    <section class="hero-mb">
+        <div class="hero-content">
+            <h1>LA CARTE MÈRE</h1>
+            <p>Le chef d'orchestre de votre configuration</p>
+        </div>
+    </section>
+
+    <main class="container">
+
+        <div class="explanation-box">
+            <h2>C'est quoi ?</h2>
+            <p>La carte mère est le composant central sur lequel tous les autres éléments viennent se brancher. C'est
+                elle qui assure la communication entre le processeur, la mémoire vive, et la carte graphique.</p>
+        </div>
+
+        <h2 class="section-title">Les 4 zones clés</h2>
+
+
+
+        <div class="ram-comparison">
+
+            <div class="ram-block active">
+                <div class="ram-label">01</div>
+                <div class="ram-details">
+                    <h3>Le Socket</h3>
+                    <p>C'est l'emplacement où l'on installe le processeur. Il doit être compatible avec la marque de
+                        votre CPU (Intel ou AMD).</p>
+                </div>
+            </div>
+
+            <div class="ram-block">
+                <div class="ram-label">02</div>
+                <div class="ram-details">
+                    <h3>Les Slots RAM</h3>
+                    <p>Ces longs connecteurs accueillent vos barrettes de mémoire vive pour donner de la réactivité à
+                        votre système.</p>
+                </div>
+            </div>
+
+            <div class="ram-block">
+                <div class="ram-label">03</div>
+                <div class="ram-details">
+                    <h3>Ports PCIe</h3>
+                    <p>Le connecteur principal pour votre carte graphique, mais aussi pour d'autres extensions comme des
+                        cartes Wi-Fi.</p>
+                </div>
+            </div>
+
+            <div class="ram-block">
+                <div class="ram-label">04</div>
+                <div class="ram-details">
+                    <h3>Le Panneau Arrière</h3>
+                    <p>Toute la connectique externe : ports USB, prises audio, et port Ethernet pour internet.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="navigation-footer">
+            <p>Besoin de voir un autre composant ?</p>
+            <button class="go-to">Voir le Processeur</button>
         </div>
 
     </main>
 
+
     <footer>
-        &copy;BTS SIO 2025-2027. Tous droits réservés.
+        &copy; BTS SIO 2025-2027. Tous droits réservés.
     </footer>
+
 </body>
+
 </html>
