--- a/stockage.html
+++ b/stockage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockage | SSD vs HDD - Cyber-Hardware</title>
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/cpu.css">
+    <link rel="stylesheet" href="css/stockage.css">
 
 
 </head>
