ajout du bouton "CPU" dans la carte analogie du CPU et ajustement du style CSS pour centrer le contenu et améliorer l'apparence du bouton.

--- a/architecture.html
+++ b/architecture.html
@@ -43,6 +43,7 @@
                 <h3>Le CPU : Le Chef de Cuisine</h3>
                 <p>C'est lui qui exécute les instructions (les recettes). Plus il est rapide, plus il traite de
                     commandes vite.</p>
+                <a href="cpu.html"><button class="go-to-arch">CPU</button></a>
             </div>
 
             <div class="analogy-card">
@@ -50,6 +51,7 @@
                 <h3>La RAM : Le Plan de Travail</h3>
                 <p>C'est l'espace où le chef pose ses ingrédients en cours d'utilisation. Plus il est grand, plus on
                     peut préparer de plats en même temps.</p>
+                <a href="ram.html"><button class="go-to-arch">RAM</button></a>
             </div>
 
             <div class="analogy-card">
@@ -57,6 +59,7 @@
                 <h3>Le Stockage : Le Réfrigérateur</h3>
                 <p>C'est là qu'on range les données sur le long terme. Un SSD est comme un frigo bien rangé où l'on
                     trouve tout instantanément.</p>
+                <a href="stockage.html"><button class="go-to-arch">Stockage</button></a>
             </div>
 
             <div class="analogy-card">
@@ -64,6 +67,7 @@
                 <h3>La Carte Mère : La Cuisine</h3>
                 <p>C'est la structure même de la pièce qui relie le chef, le plan de travail et le frigo pour qu'ils
                     communiquent entre eux.</p>
+                <a href="mobo.html"><button class="go-to-arch">Carte Mère</button></a>
             </div>
         </div>
     </main>
