refonte de la section architecture avec des boutons améliorés pour la navigation entre les pages des composants de l'ordinateur. Et ajustement du style CSS de la page stockage.html pour une meilleure présentation des informations.

--- a/stockage.html
+++ b/stockage.html
@@ -30,12 +30,15 @@
 
 
     <main>
-        <div>
-            <h1>
-                Le disque dur
-            </h1>
-            <p></p>
-        </div>
+        <main class="storage-section">
+            <section class="hero-storage">
+                <h1>Le Stockage de Données</h1>
+                <p>Le coffre-fort de votre système et de vos fichiers.</p>
+            </section>
+
+            <div class="container">
+            </div>
+        </main>
 
 
         <div class="content-text">
