ajout des footer là où y'en avait pas

--- a/architecture.html
+++ b/architecture.html
@@ -72,6 +72,9 @@
         </div>
     </main>
 
+    <footer>
+        <p>&copy; BTS SIO 2025-2027. Tous droits réservés.</p>
+    </footer>
 
 
 </body>
