--- a/cooling.html
+++ b/cooling.html
@@ -58,6 +58,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <p>&copy; BTS SIO 2025-2027. Tous droits réservés.</p>
+    </footer>
 </body>
 
 </html>
