--- a/ram.html
+++ b/ram.html
@@ -58,7 +58,7 @@
         </div>
     </main>
 
-    <footer class="container text-center py-4 mt-5 border-top border-secondary">
+    <footer>
         <p>&copy; BTS SIO 2025-2027. Tous droits réservés.</p>
     </footer>
 </body>
