Ajout du style active pour la nav bar

--- a/cpu.html
+++ b/cpu.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="architecture.html">Architecture</a></li>
-                <li><a href="cpu.html">CPU</a></li>
+                <li><a href="cpu.html"class="active">CPU</a></li>
                 <li><a href="gpu.html">GPU</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
