--- a/ram.html
+++ b/ram.html
@@ -15,7 +15,7 @@
                 <li><a href="architecture.html">Architecture</a></li>
                 <li><a href="cpu.html">CPU</a></li>
                 <li><a href="gpu.html">GPU</a></li>
-                <li><a href="ram.html">RAM</a></li>
+                <li><a href="ram.html"class="active">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
