--- a/architecture.html
+++ b/architecture.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="architecture.html">Architecture</a></li>
+                <li><a href="architecture.html" class="active">Architecture</a></li>
                 <li><a href="cpu.html">CPU</a></li>
                 <li><a href="gpu.html">GPU</a></li>
                 <li><a href="ram.html">RAM</a></li>
