--- a/gpu.html
+++ b/gpu.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="architecture.html">Architecture</a></li>
                 <li><a href="cpu.html">CPU</a></li>
-                <li><a href="gpu.html">GPU</a></li>
+                <li><a href="gpu.html"class="active">GPU</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
