--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html"class="active">Accueil</a></li>
                 <li><a href="architecture.html">Architecture</a></li>
                 <li><a href="cpu.html">CPU</a></li>
                 <li><a href="gpu.html">GPU</a></li>
