--- a/mobo.html
+++ b/mobo.html
@@ -17,7 +17,7 @@
                 <li><a href="gpu.html">GPU</a></li>
                 <li><a href="ram.html">RAM</a></li>
                 <li><a href="stockage.html">Stockage</a></li>
-                <li><a href="mobo.html">Carte Mère</a></li>
+                <li><a href="mobo.html"class="active">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
             </ul>
         </nav>
