--- a/stockage.html
+++ b/stockage.html
@@ -20,8 +20,8 @@
                 <li><a href="cpu.html">CPU</a></li>
                 <li><a href="gpu.html">GPU</a></li>
                 <li><a href="ram.html">RAM</a></li>
-                <li><a href="stockage.html">Stockage</a></li>
-                <li><a href="mobo.html">Carte Mère</a></li>
+                <li><a href="stockage.html" class="active">Stockage</a></li>
+                <li><a href="mobo.html" >Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
             </ul>
         </nav>
