ajout de la page à propos

--- a/architecture.html
+++ b/architecture.html
@@ -23,6 +23,9 @@
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
+                <li><a href="a-propos.html"></a>À propos</li>
+
+
             </ul>
         </nav>
     </header>
