--- a/stockage.html
+++ b/stockage.html
@@ -23,6 +23,8 @@
                 <li><a href="stockage.html" class="active">Stockage</a></li>
                 <li><a href="mobo.html" >Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
+                <li><a href="a-propos.html"></a>À propos</li>
+
             </ul>
         </nav>
     </header>
