--- a/ram.html
+++ b/ram.html
@@ -19,6 +19,8 @@
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
+                <li><a href="a-propos.html"></a>À propos</li>
+
             </ul>
         </nav>
     </header>
