Correction d'une erreur dans la navigation de toutes les pages html (section à propos)

--- a/stockage.html
+++ b/stockage.html
@@ -23,7 +23,7 @@
                 <li><a href="stockage.html" class="active">Stockage</a></li>
                 <li><a href="mobo.html" >Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
-                <li><a href="a-propos.html"></a>À propos</li>
+                <li><a href="a-propos.html">À propos</a></li>
 
             </ul>
         </nav>
