--- a/cooling.html
+++ b/cooling.html
@@ -21,7 +21,7 @@
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
-                <li><a href="a-propos.html"></a>À propos</li>
+                <li><a href="a-propos.html">À propos</a></li>
 
             </ul>
         </nav>
