--- a/mobo.html
+++ b/mobo.html
@@ -19,7 +19,7 @@
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html"class="active">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
-                <li><a href="a-propos.html"></a>À propos</li>
+                <li><a href="a-propos.html">À propos</a></li>
 
             </ul>
         </nav>
