Ajout du responsive

--- a/a-propos.html
+++ b/a-propos.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DocuCyber-Hardware | La Tour de Contrôlement</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/cooling.css">
-    <link rel="stylesheet" href="a-propos.css">
+    <link rel="stylesheet" href="css/a-propos.css">
 </head>
+
 <body>
-     <header>
+    <header>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -20,6 +22,7 @@
                 <li><a href="stockage.html">Stockage</a></li>
                 <li><a href="mobo.html">Carte Mère</a></li>
                 <li><a href="cooling.html">Alimentation & Refroidissement</a></li>
+                <li><a href="a-propos.html">À propos</a></li>
             </ul>
         </nav>
     </header>
@@ -33,15 +36,24 @@
 
         <section class="section2">
             <p>
-                Ce site a pour objectif d’aider les utilisateurs à comprendre, comparer et maîtriser les principaux composants matériels d’un ordinateur. <br>
-                Il propose une approche claire et structurée de l’architecture d’un PC afin de permettre à chacun de mieux appréhender le fonctionnement interne de sa machine. <br>
+                Ce site a pour objectif d’aider les utilisateurs à comprendre, comparer et maîtriser les principaux
+                composants matériels d’un ordinateur. <br>
+                Il propose une approche claire et structurée de l’architecture d’un PC afin de permettre à chacun de
+                mieux appréhender le fonctionnement interne de sa machine. <br>
 
-                Les contenus présentés couvrent les éléments essentiels du matériel informatique, notamment le processeur (CPU), la carte graphique (GPU), la mémoire vive (RAM), les solutions de stockage, la carte mère, l’alimentation et les systèmes de refroidissement. <br>
-                Chaque composant est expliqué en détail, avec un focus sur son rôle, ses caractéristiques techniques et son impact sur les performances globales de l’ordinateur. <br>
+                Les contenus présentés couvrent les éléments essentiels du matériel informatique, notamment le
+                processeur (CPU), la carte graphique (GPU), la mémoire vive (RAM), les solutions de stockage, la carte
+                mère, l’alimentation et les systèmes de refroidissement. <br>
+                Chaque composant est expliqué en détail, avec un focus sur son rôle, ses caractéristiques techniques et
+                son impact sur les performances globales de l’ordinateur. <br>
 
-                Au-delà de la compréhension théorique, le site met l’accent sur la comparaison des technologies et des caractéristiques afin d’aider les utilisateurs à faire des choix adaptés à leurs besoins, que ce soit pour un usage bureautique, professionnel ou orienté performance. <br>
+                Au-delà de la compréhension théorique, le site met l’accent sur la comparaison des technologies et des
+                caractéristiques afin d’aider les utilisateurs à faire des choix adaptés à leurs besoins, que ce soit
+                pour un usage bureautique, professionnel ou orienté performance. <br>
 
-                Destiné aux étudiants, aux passionnés d’informatique et aux utilisateurs souhaitant approfondir leurs connaissances, ce site vise à offrir une maîtrise progressive et pratique des composants d’un PC, dans une démarche pédagogique, fiable et accessible.
+                Destiné aux étudiants, aux passionnés d’informatique et aux utilisateurs souhaitant approfondir leurs
+                connaissances, ce site vise à offrir une maîtrise progressive et pratique des composants d’un PC, dans
+                une démarche pédagogique, fiable et accessible.
             </p>
         </section>
     </main>
@@ -55,4 +67,5 @@
 
 
 </body>
+
 </html>
